<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, SteamDroidActivity!</string>
    <string name="app_name">Steam Droid</string>
    <string name="Send"></string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="change_state">Change state</string>
</resources>
